# loxguard

./: .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  CTestTestfile.cmake  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  TODO.md  cmake_install.cmake  loxguardConfig.cmake
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  evidence_report.md
.github/workflows/: ci.yml  release-check.yml  release.yml
archive_notes/: DEPRECATED_OLD_DIRECTION.md  INPUT_ZIP_NOTES.md  V4_UPDATE_NOTES.md
artifacts/evidence/: README.md
artifacts/evidence/esp32/: README.md
artifacts/evidence/host/: windows_build_verify_ctest.txt  windows_build_verify_notes.txt  wsl_ubuntu24_clang_build_clang.txt  wsl_ubuntu24_gcc_build_gcc.txt
build_arm/: Makefile  cmake_install.cmake
build_noeco/: CTestTestfile.cmake  cmake_install.cmake
build_noeco/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
build_noeco/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
build_nvlog/: CTestTestfile.cmake  cmake_install.cmake
build_nvlog/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
build_nvlog/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
cmake/: loxguardConfig.cmake.in
docs/: API.md  API_STABILITY.md  ARCHITECTURE.md  BLACKBOX.md  CHECKED_GUARD_BLOCKS.md  COMPILER_PLUGIN_PLAN.md  COMPONENT_INTEGRATION_STATUS.md  COMPONENT_INVENTORY_IMPLEMENTATION.md  COMPONENT_REUSE_IMPLEMENTATION_MAP.md  EVENT_SCHEMA.md  EVIDENCE_MATRIX.md  FAILURE_PIPELINE.md  FORMAT_EXPORTS.md  GUARD_BLOCKS.md  GUARD_MEMORY_CONTRACTS.md  INTEGRATION.md  LIMITATIONS.md  LOXGUARD_UNIFIED_PRODUCT_SPEC.md  MVP_HOST_DEMO.md  POLICY_ENGINE.md  PROFILES.md  PROFILES_IMPLEMENTATION.md  RELEASE_NOTES_v0.1.0-alpha.md  RELEASE_NOTES_v1.0.0.md  RELEASE_NOTES_v1.0.1.md  RELEASE_NOTES_v1.0.2.md  REVIEW_AND_CONSOLIDATE_STATUS.md  SAFE_SPAN_ARENA_API.md
docs/design/: COMPONENT_REUSE_MAP.md  DECISION_LOG.md  INSTRUMENTATION_ROADMAP.md  LOXGUARD_UNIFIED_PRODUCT_SPEC.md  MPU_BACKEND_PLAN.md  README.md  ROADMAP_CHECKLIST.md  RTOS_BACKEND_PLAN.md  SOFTWARE_FAULT_ISOLATION.md  TEST_EVIDENCE_PLAN.md
examples/: host_backend_demo.c  host_demo.c
examples/bench/loxguard_bench/: loxguard.h  loxguard_adapters.h  loxguard_backends.h  loxguard_bench.ino  loxguard_core.c  loxguard_format.h  loxguard_ports.h  loxguard_rtos_bridge.h  loxguard_shell.h
examples/guarded/: guarded_parser.c  guarded_parser.h
include/: loxguard.h  loxguard_adapters.h  loxguard_backends.h  loxguard_checked.h  loxguard_experimental.h  loxguard_format.h  loxguard_ports.h  loxguard_profiles.h  loxguard_rtos_bridge.h  loxguard_shell.h
prompts/: 00_MASTER_CONTEXT.md  01_PRODUCT_SPEC_GUARD_BLOCKS.md  02_GUARD_BLOCK_API_DESIGN.md  03_CHECKED_GUARD_BLOCKS.md  03_FAILURE_PIPELINE_DESIGN.md  04_EVENT_SCHEMA.md  04_MEMORY_CONTRACTS.md  05_POLICY_ENGINE.md  05_SAFE_SPAN_ARENA_API.md  06_BLACKBOX.md  06_FAILURE_PIPELINE_DESIGN.md  07_COMPONENT_INVENTORY.md  07_EVENT_SCHEMA.md  08_COMPONENT_REUSE_MAP.md  08_POLICY_ENGINE.md  09_BLACKBOX.md  09_PROFILES.md  10_COMPONENT_INVENTORY.md  10_MVP_HOST_DEMO_DESIGN.md  11_COMPONENT_REUSE_MAP.md  11_MVP_IMPLEMENTATION_PLAN.md  12_PROFILES.md  12_TEST_EVIDENCE_PLAN.md  13_DOCS_POSITIONING.md  13_MVP_CHECKED_PARSER_DEMO_DESIGN.md  14_MVP_IMPLEMENTATION_PLAN.md  14_RTOS_BACKEND_PLAN.md  15_MPU_BACKEND_PLAN.md  15_TEST_EVIDENCE_PLAN.md  16_INSTRUMENTATION_ROADMAP.md  16_REVIEW_AND_CONSOLIDATE.md  17_COMPILER_PLUGIN_PLAN.md  18_RTOS_BACKEND_PLAN.md  19_MPU_BACKEND_PLAN.md  20_REVIEW_AND_CONSOLIDATE.md  PROMPT_ORDER_V4.md
review/: CODEX_REVIEW_PROMPT.md
src/: loxguard.c  loxguard_adapters.c  loxguard_backends.c  loxguard_format.c  loxguard_ports.c  loxguard_rtos_bridge.c  loxguard_shell.c
src/adapters/: loxguard_loxdb_adapter.c  loxguard_nvlog_adapter.c
templates/: CHECKED_PARSER_DEMO_TEMPLATE.md  COMPONENT_INVENTORY_TEMPLATE.md  DECISION_RECORD_TEMPLATE.md  EVIDENCE_MATRIX_TEMPLATE.md  FINAL_REPORT_TEMPLATE.md  MEMORY_CONTRACT_TEMPLATE.md
tests/: test_arena.c  test_common.c  test_common.h  test_guarded_module.c  test_loxguard_run.c  test_main.c  test_microtest_smoke.c  test_phase01_core.c  test_pipeline.c  test_pipeline_legacy.c  test_ports.c  test_rtos_bridge.c  test_shell.c  test_span.c
tests/consumer/: README.md
tests/consumer/add_subdirectory/: CMakeLists.txt  main.c
tests/consumer/install_find_package/: CMakeLists.txt  main.c
tests/consumer/install_find_package_cpp/: CMakeLists.txt  main.cpp
tools/: arm_cortexm_compile_only.cmake  blackbox_layout_compat_check.cmake  compile_fail_contracts_check.cmake  consumer_smoke_test.cmake  guard_static_check.ps1  make_release_zip.ps1  version_consistency_check.cmake
